@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(append_samples,SummarizedExperiment)
 S3method(as_tibble,SummarizedExperiment)
 S3method(bind_cols,RangedSummarizedExperiment)
 S3method(bind_cols,SummarizedExperiment)
@@ -132,6 +133,7 @@ importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,eval_select)
 importFrom(tidyselect,one_of)
+importFrom(ttservice,append_samples)
 importFrom(ttservice,bind_cols)
 importFrom(ttservice,bind_rows)
 importFrom(ttservice,plot_ly)
