@@ -1,0 +1,28 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/dplyr_methods.R
+\name{append_samples}
+\alias{append_samples}
+\alias{append_samples.SummarizedExperiment}
+\title{Append samples from multiple SummarizedExperiment objects}
+\usage{
+\method{append_samples}{SummarizedExperiment}(x, ..., .id = NULL)
+}
+\arguments{
+\item{x}{First SummarizedExperiment object to combine}
+
+\item{...}{Additional SummarizedExperiment objects to combine by samples}
+
+\item{.id}{Object identifier (currently not used)}
+}
+\value{
+A combined SummarizedExperiment object
+}
+\description{
+Append samples from multiple SummarizedExperiment objects by column-binding them.
+This function is equivalent to \code{cbind} but provides a tidyverse-like interface.
+}
+\examples{
+data(se)
+append_samples(se, se)
+
+}
